--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,4 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Depends: R (>= 2.0), spams-R
+Depends: R (>= 2.0), spams
